--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 {% extends "bootstrap/base.html" %}
-{% block title %} Giffy All Around{% endblock %}
+{% block title %} Addicted to GIFs{% endblock %}
 
 {% block navbar %}
 <div class="navbar navbar-fixed-top">
