--- a/templates/index.html
+++ b/templates/index.html
@@ -7,23 +7,17 @@
 {% endblock %}
 {% block content %}
 	<div class = "container">
-		<div class="row">
 			<div class="content">
 				<br />
-				<div class="row">
 					{% for item in giffy %}
-					<div class="center-block">
-						<div class="col-md-4 col-sm-3 col-md-offset-2">
+						<div class="col-md-6 col-sm-3">
 							<div class = "clearfix">
 								<img src = "{{item.image_url}}">
 							</div>
 							<h3>{{item.title}}</h3>
 							<p>{{item.excerpt|safe}}</p>
 						</div>	
-					</div>
 					{% endfor %}
-				</div>
 			</div>
-		</div>
 	</div>
 {% endblock %}
