--- a/templates/index.html
+++ b/templates/index.html
@@ -18,6 +18,12 @@
 							<p>{{item.excerpt|safe}}</p>
 						</div>	
 					{% endfor %}
+				<div class = "col-md-8 center-block" >
+					<form method = "POST">
+						<input class="btn btn-primary btn-lg active center-block" type="submit" value="Refresh"></input>
+					</form>
+				</div>
 			</div>
+			
 	</div>
 {% endblock %}
